[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "ruslox"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
runtime = { path = "../runtime" }
compiler = { path = "../compiler" }
codespan-reporting = "0.11.1"
