[package]
name = "compiler-handwritten"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
phf = { version = "0.11.2", features = ["macros"] }
codespan-reporting = "0.11.1"
